[tool.poetry]
name = "test-cl"
version = "0.1.0"
description = "test creation lib analyzes your source files and generates test files for them"
authors = ["Roaldo"]
readme = "README.md"
# packages = [{include = "test_cl"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
